<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_vertical_margin">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/movies_mini_poster"
        android:layout_width="@dimen/mini_poster_width"
        android:layout_height="@dimen/mini_poster_height"
        android:layout_marginEnd="@dimen/activity_vertical_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mini_vertical_margin"
        android:layout_toEndOf="@id/movies_mini_poster"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movies_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movies_title" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_rate"
            android:textStyle="bold"
            android:text="@string/rate"/>

        <TextView
            android:id="@+id/movies_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:text="@string/movies_desc" />


    </LinearLayout>

</RelativeLayout>